# TIMES-NZ-Model-Files

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .yamllint  Dockerfile  README.md  Veda_SnT.MDB  readme-new.md  readme.md  requirements-dev.txt  requirements.txt
PREPARE-TIMES-NZ/: .gitattributes  dodo.py  pyproject.toml  readme.md  test.txt
PREPARE-TIMES-NZ/analysis/: analyse_historical_wind_generation.py  analysis_readme.md
PREPARE-TIMES-NZ/analysis/ag_forest_fish/: analyse_load_curves.py  analyse_load_curves_irrigation.py
PREPARE-TIMES-NZ/analysis/commercial/: analyse_load_curves.py
PREPARE-TIMES-NZ/analysis/demand_projections/: analyse_demand_projections.py  industry_get_demand_growth.py
PREPARE-TIMES-NZ/analysis/oil_and_gas/: field_supply_projections.py
PREPARE-TIMES-NZ/analysis/residential/: analyse_disaggregation.py  analyse_load_curves.py  analyse_population.py
PREPARE-TIMES-NZ/data_intermediate/data_scraping/: metadata.csv
PREPARE-TIMES-NZ/data_raw/0_config/: SysSettings.toml
PREPARE-TIMES-NZ/data_raw/1_configuration/: SysSettings.toml
PREPARE-TIMES-NZ/data_raw/archive/: raw_tables.txt
PREPARE-TIMES-NZ/data_raw/concordances/: emi_fleet_list.csv  mbie_emi_plant_concordances.csv  md_plant_list.csv  region_island_concordance.csv
PREPARE-TIMES-NZ/data_raw/data_scraping/: metadata.csv
PREPARE-TIMES-NZ/data_raw/external_data/: readme.txt
PREPARE-TIMES-NZ/data_raw/other/: CapacityFactors.csv  GenerationFleet.csv  GenericCurrentPlants.csv
PREPARE-TIMES-NZ/data_raw/stage_0_config/: SysSettings.toml
PREPARE-TIMES-NZ/data_raw/user_config/: SysSettings.toml  TimeSlice_map.csv  VT_TIMESNZ_COM.toml  VT_TIMESNZ_ELC.toml  VT_TIMESNZ_IND.toml  VT_TIMESNZ_NewTransport.toml  VT_TIMESNZ_PRI.toml  VT_TIMESNZ_RES.toml  VT_TIMESNZ_TRATECH.toml  peak_periods.csv  readme.txt
PREPARE-TIMES-NZ/docs/: configuration_file_guide.md  data_structures.md  developer_guide.md  raw_data_sources.md
PREPARE-TIMES-NZ/docs/developer_guide/: data_structures.md
PREPARE-TIMES-NZ/docs/model_methodology/: base_year_agriculture.md  base_year_commercial.md  base_year_electricity.md  base_year_industry.md  base_year_residential.md  base_year_transport.md  learning_curves.md  load_curves.md
PREPARE-TIMES-NZ/docs/new_tech_data/: learning_curves.md
PREPARE-TIMES-NZ/output/: BY_Trans.xlsx  SysSettings.xlsx  VT_NI_ELC_V4.xlsx  VT_NI_IND_V2.xlsx  VT_NI_OTH_V4.xlsx  VT_NI_PRI_V4.xlsx  VT_NI_TRA_V4.xlsx  VT_SI_ELC_V4.xlsx  VT_SI_IND_V2.xlsx  VT_SI_OTH_V4.xlsx  VT_SI_PRI_V4.xlsx  VT_SI_TRA_V4.xlsx
PREPARE-TIMES-NZ/output/SubRES_TMPL/: SubRES_NewTech_AGR_KEA.xlsx  SubRES_NewTech_AGR_KEA_Trans.xlsx  SubRES_NewTech_AGR_TUI.xlsx  SubRES_NewTech_AGR_TUI_Trans.xlsx  SubRES_NewTech_ELC_KEA.xlsx  SubRES_NewTech_ELC_TUI.xlsx  SubRES_NewTech_RC.xlsx  SubRES_NewTechs_Industry.xlsx  SubRES_NewTechs_Industry_Trans.xlsx  (+2 more)
PREPARE-TIMES-NZ/scripts/: prepare_times_nz.py  prepare_times_nz_cli.py  prepare_times_nz_from_archive.py  preprocessing.py  read_summary.py  supply_projections.py  temp_create_folder_structure.py
TIMES-NZ-INTERNAL-QA/: .gitignore  app.py  pyproject.toml  readme.md  requirements.txt  run_local.py
TIMES-NZ-INTERNAL-QA/assets/: app_use.md  styles.css  times_101.md
TIMES-NZ-INTERNAL-QA/data/: dummy_demand.csv  dummy_energy.csv  elec_generation.csv
TIMES-NZ-INTERNAL-QA/rsconnect-python/: TIMES-NZ-INTERNAL-QA.json
TIMES-NZ-INTERNAL-QA/scripts/: delta_check.py  delta_setup.py  internal_qa.ipynb  preprocessing.py  run_app.py  run_delta_app.py  run_glance_app.py  test.py  wait_what.py
(+1611 files in other folders)
