[tool.poetry]
name = "PREPARE-TIMES-NZ"
version = "0.1.0"
description = "Data-prep pipeline for the TIMES-NZ model"
readme = "readme.md"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<4"
pandas = "^2.2"
numpy = "^2.0"
doit = "^0.36"
seaborn = "^0.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pylint = "^3.0"
black = "^25.0"
isort = "^6.0"
pip-audit = "^2.0"
coverage = "^7.0"
pre-commit = "^4.0"
yamllint = "^1.0"
pyarrow = "^21.0"
openpyxl = "^3.0"
tomli-w = "^1.2"
plotnine = "^0.15.0"

[[tool.poetry.include]]
path = "prepare_times_nz/data/**/*.csv"

[[tool.poetry.include]]
path = "prepare_times_nz/data/**/*.toml"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
source-roots = ["PREPARE-TIMES-NZ/src"]
